# attempt

./: .gitignore  Cargo.toml  build.rs
proto/: helloworld.proto
server/: go.mod  main.go
server/proto/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
src/: lib.rs
